# pet_projects

./: Note.docx  README.md
BMP_CourseWork/src/: Berezovskaia_Valeriya_cw.c
Bio/: Note.docx
Bio/SEIR/: CMakeLists.txt  Matrix.cpp  Matrix.h  Model.cpp  Model.h  Optimizer.cpp  Optimizer.h  State.cpp  State.h  data.txt  gnuplot.py  main.cpp  plot.p  sir.cpp
Bio/SIR/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp  sir.cpp  sir.hpp
DataSructures_CourseWork/src/: AVL_tree.py  Hash.py  main.py
Iceberg/src/: CMakeLists.txt  Calculator.cpp  MyMatrix.cpp  MyMatrix.h  MyVector.cpp  MyVector.h  face.h  main.cpp  model.cpp  model.h  plane.cpp  plane.h  state.cpp  state.h  visual.cpp  visual.h
web_projects/tetris/: index.html  script.js
web_projects/tetris/styles/: style.css
web_projects/tetris/styles/tetrominos/: localhost.crt
